--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,12 @@
 .accordion-content.show {
   max-height: 300px; /* Or any height you want */
 }
+
+
+.swiper-pagination-bullet{
+  background-color: white;
+  width: 60px;
+  height: 4px;
+  border-radius:40% ;
+
+}
